# Trabalho-Final-PI

./: .gitignore  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  main.cpp  predictions.cpp
lib/: azulejo_bridge.dart  main.dart
lib/screens/: azulejo_detail_screen.dart  detector_screen.dart  gallery_screen.dart  home_screen.dart
